@@ -36,12 +36,19 @@
 # type is created. Set to None (or any false value) the default CPSDocument 
 # actions will be used
 
+# The 'metadata' schema is handled specially by CPSDocument, and should not 
+# be edited. Therefore we need support for two metadata schemas. These are
+# defined by 'metadata_schemas', and are typically either 'metadata' plus 
+# another, or only the other. Only 'metadata' does not work, and more than 
+# one other than 'metadata' makes no sense. 
+
 return {'type_prefix': 'simpletype_', # The id prefix for TypeMaker types.
         'style_prefix': 'layout_default_tab_',
-        'base_schemas': ['metadata', 'custom_metadata', 'common'],
+        'base_schemas': ['basemetadata', 'custom_metadata', 'common'],
         'base_layouts': ['common'],
         'add_in_types': ['Workspace', 'Section'],
-        'metadata_id': 'custom_metadata',
+        'metadata_layout': 'metadata',
+        'metadata_schemas': ['metadata', 'custom_metadata'],
         'widget_list': None,
         'flexible_widget_list': None,
         'type_actions': None,
